// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots onboarding/FAQs Faq 1`] = `
<div>
  <div>
    <div>
      <button
        class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
        data-testid="ds-button"
        type="button"
      >
        <div
          class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
          color="light.900"
          data-testid="ds-text"
        >
          All FAQs
        </div>
      </button>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots onboarding/FAQs Specific Section Faq 1`] = `
<div>
  <div>
    <div>
      <button
        class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
        data-testid="ds-button"
        type="button"
      >
        <div
          class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
          color="light.900"
          data-testid="ds-text"
        >
          billing - label
        </div>
      </button>
      <br />
      <br />
      <button
        class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
        data-testid="ds-button"
        type="button"
      >
        <div
          class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
          color="light.900"
          data-testid="ds-text"
        >
          website details
        </div>
      </button>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;
